whole buncha work on my desktop

--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,3 +1,5 @@
+$offWhite: rgb(221, 222, 236);
+$lightGray: #9b9b9b;
 $darkGray: #333333;
-$deepBlue: #4E48FF;
-$beachYellow: #FFF67E;
+$deepBlue: #020035;
+$beachYellow: #7c6a00;
