--- a/src/screens/App/App.scss
+++ b/src/screens/App/App.scss
@@ -3,23 +3,12 @@
 body {
   display: "flex";
   flex: 1;
-  background-color: colors.$darkGray;
+  background-color: white;
   align-items: center;
 }
 
-p {
-  color: rgb(0, 0, 0);
-}
-
-.page {
-  background-color: rgb(250, 250, 150);
-}
-
 .navBar {
-  flex: 1;
+  /*flex: 1;
   display: "flex";
-  align-items: flex-end;
-  margin-top: 100px;
-  justify-content: space-between;
-  align-content: space-between;
+  background-color: colors.$offWhite;*/
 }
