--- a/src/screens/HomeScreen/HomeScreen.scss
+++ b/src/screens/HomeScreen/HomeScreen.scss
@@ -1,17 +1,18 @@
 @use '../../sass/colors';
 
 .topLevel {
-  display: 'flex';
-  padding: '1em';
-  background-color: 'white';
-  justify-content: 'center';
-  flex-direction: 'column';
+  display: flex;
+  padding: 1em;
+  background-color: white;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .socialButtonsContainer {
-  display: 'inline-flex';
-  flex-direction: 'row';
-  background-color: 'white';
-  justify-content: 'space-between';
-  width: 'min-content';
+  display: inline-flex;
+  flex-direction: row;
+  background-color: white;
+  justify-content: space-between;
+  width: min-content;
+  padding: 2em;
 }
