working on app, homescreen, portfolioscreen, made PortfolioRow class

--- a/src/screens/App/App.scss
+++ b/src/screens/App/App.scss
@@ -2,5 +2,9 @@
 
 .navBar {
   //display: flex;
-  background-color: colors.$offWhite;
+  background-color: colors.$deepBlue;
+}
+
+.navBarTab {
+  color: white;
 }
