--- a/src/screens/HomeScreen/HomeScreen.scss
+++ b/src/screens/HomeScreen/HomeScreen.scss
@@ -1,10 +1,9 @@
 @use '../../sass/colors';
 
 .topLevel {
-  display: flex;
+  //display: flex;
   padding: 1em;
-  background-color: white;
-  justify-content: center;
+  background-color: clear;
   flex-direction: column;
 }
 
